--- a/index.html
+++ b/index.html
@@ -1,1 +1,138 @@
-halo bang
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coming Soon</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: "Arial", sans-serif;
+        background-color: #111;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+
+      .container {
+        text-align: center;
+      }
+
+      h1 {
+        font-size: 3em;
+      }
+
+      p {
+        font-size: 1.5em;
+        margin-top: 0.5em;
+      }
+
+      #countdown {
+        font-size: 2em;
+        margin-top: 1em;
+      }
+
+      /* Dark Mode */
+      body.dark-mode {
+        background-color: #222;
+        color: #fff;
+      }
+
+      .toggle-container {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+      }
+
+      .toggle-label {
+        display: flex;
+        align-items: center;
+        color: #fff;
+      }
+
+      .toggle-label span {
+        margin-right: 5px;
+      }
+
+      .toggle-switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+      }
+
+      .toggle-switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+
+      .toggle-slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: 0.4s;
+        transition: 0.4s;
+      }
+
+      .toggle-slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: #fff;
+        -webkit-transition: 0.4s;
+        transition: 0.4s;
+      }
+
+      input:checked + .toggle-slider {
+        background-color: #2196f3;
+      }
+
+      input:focus + .toggle-slider {
+        box-shadow: 0 0 1px #2196f3;
+      }
+
+      input:checked + .toggle-slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="toggle-container">
+      <label class="toggle-label">
+        <span>Dark Mode</span>
+        <div class="toggle-switch">
+          <input type="checkbox" id="darkModeToggle" />
+          <span class="toggle-slider"></span>
+        </div>
+      </label>
+    </div>
+
+    <div class="container">
+      <h1>Coming Soon</h1>
+      <p>We are working on something awesome!</p>
+      <div id="countdown">00:00:00:00</div>
+    </div>
+
+    <script>
+      const darkModeToggle = document.getElementById("darkModeToggle");
+      const body = document.body;
+
+      darkModeToggle.addEventListener("change", () => {
+        body.classList.toggle("dark-mode");
+      });
+    </script>
+  </body>
+</html>
