--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
         margin: 0;
         padding: 0;
         font-family: "Arial", sans-serif;
-        background-color: #111;
-        color: #fff;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -19,6 +17,7 @@
 
       .container {
         text-align: center;
+        transition: color 0.3s, background-color 0.3s;
       }
 
       h1 {
@@ -37,7 +36,7 @@
 
       /* Dark Mode */
       body.dark-mode {
-        background-color: #222;
+        background-color: #111;
         color: #fff;
       }
 
@@ -129,10 +128,18 @@
     <script>
       const darkModeToggle = document.getElementById("darkModeToggle");
       const body = document.body;
+      const container = document.querySelector(".container");
 
       darkModeToggle.addEventListener("change", () => {
         body.classList.toggle("dark-mode");
+        updateTheme();
       });
+
+      function updateTheme() {
+        const isDarkMode = body.classList.contains("dark-mode");
+        container.style.color = isDarkMode ? "#fff" : "#000";
+        container.style.backgroundColor = isDarkMode ? "#111" : "#fff";
+      }
     </script>
   </body>
 </html>
