--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       .container {
         text-align: center;
         transition: color 0.3s, background-color 0.3s;
+        background-color: white;
+        color: black;
       }
 
       h1 {
