--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         position: fixed;
         top: 20px;
         right: 20px;
+        background-color: white;
+        color: black;
       }
 
       .toggle-label {
